fix text wrap

--- a/wp-content/themes/pub/wporg-learn-2024/src/style/_sensei.scss
+++ b/wp-content/themes/pub/wporg-learn-2024/src/style/_sensei.scss
@@ -171,6 +171,10 @@ body.sensei {
 					display: block;
 					opacity: 1;
 					position: unset;
+
+					@media (max-width: 460px) {
+						width: 47%;
+					}
 				}
 
 				.wporg-learn-facilitator-notes-label {
